--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,9 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom mb-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">
+        <strong>tokobuku</strong>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,6 +26,8 @@
           <a class="nav-link" href="/">Home</a>
           <a class="nav-link" href="/kategori/">Kategori</a>
           <a class="nav-link" href="/toko/">Toko</a>
+          <a href="/product/" class="nav-link">Products</a>
+          <a href="/admin" class="nav-link">Admin</a>
         </div>
       </div>
     </div>
